--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,16 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+testing specs for recipes: 
+name: string 
+summary: text
+description: text 
+
+-name must be present
+-name muct be between 5 characters and less than 100 characters
+-summary must be present 
+-summary must be between 10 characters and less than 150 characters
+-description must be present 
+-description must be between 20 and 500 characters
+-chef_id must be present
